Verion 0.9.43dev (?? ??? 2003)
  - Fixed bug 826908: Dateselect didn't work ... no matter which browser is used
  - Fixed bug 788873: reminders not working for external users
  - Fixed bug 794749: HTTP_ACCEPT_LANUAGE not found if globals are not on.
  - Fixed bug 820854: missing CR in publish.php (violates iCal)
  - Fixed bug 801850: Don't allow adding of events via public calendar
    if user enters URL by hand.
  - Modified to use md5 hashes for passwords in webcal_user rather than
    storing the passwords as plain text.  (Requires updating database
    and running conversion script.   See UPGRADING.html.)
  - Patch 795371: fix for all day events in publish.php
  - Fixed bug 512114: Daylight saving time + repeating events
  - Fixed bug 669314: Daylight Savings Time Bug in 0.9.40
  - Security fix: improved session cookie to associate the cookie with
    remote address and local server name to make hijacking a session
    cookie much harder.
  - Security fix: added new getValue() function that will error check formats
    of variables from users (HTTP GET/POST).
  - Fixed bug 769755: Saturday events not showing in week view (negative offset)
  - Check for magic_quotes_gpc.  If not enabled, fatal exit and tell user
    to modify php.ini.
  - Fixed bug: add icon appeared in printer friendly view pages (view_m.php...)
  - Fixed bug 792731: NIS login failure
  - Fixed bug 609900: wrong week number
  - Fixed bug 761793: invalid weeknumber
  - Fixed bug 607788: Number of week
  - Week Number now calculated using ISO 8601 specifications
  - Fixed bug 787788: Can't enter event beginning st midnight
  - Fixed bug 783487: SQL error on saving existing report
  - Fixed bug 760236: Timezone Offset is buggy in edit_entry_handler.php
  - Fixed bug 669434: time zone offset with week_ssi.php problem
  - Fixed bug 686288: Time Zone corrections
  - Fixed bug: TZ_OFFSET was not being used when setting $today, $thisdate, etc
  - Fixed bug: was not saving reports as global as requested