@@ -1,4 +1,5 @@
 Verion 0.9.43dev (?? ??? 2003)
+  - Fixed bug 842402: group select offset wrong when nonusers listed at top
   - Fixed bug 826908: Dateselect didn't work ... no matter which browser is used
   - Fixed bug 788873: reminders not working for external users
   - Fixed bug 794749: HTTP_ACCEPT_LANUAGE not found if globals are not on.
